adding image and footer

--- a/src/app/bookmyhall-home/bookmyhall-home.component.html
+++ b/src/app/bookmyhall-home/bookmyhall-home.component.html
@@ -1,3 +1,10 @@
-<p>
-  bookmyhall-home works!
-</p>
+<div class="container-fluid">
+  <h1>Hello World!</h1>
+  <p>Resize the browser window to see the effect.</p>
+  <p>The columns will automatically stack on top of each other when the screen is less than 768px wide.</p>
+  <div class="row">
+    <div class="col-sm-4" style="background-color:lavender;">.col-sm-4</div>
+    <div class="col-sm-8" style="background-color:lavenderblush;">.col-sm-8</div>
+  </div>
+</div>
+    
