--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,24 @@
-<p>
-  footer works!
-</p>
+<div class="container-fluid line">
+  <!-- Example row of columns -->
+  <div class="row">
+<div class="col-sm-4">
+
+ <a target="_blank" href="src/app/karnataka.png" title="Minority Affairs GoI"> <img src="src/app/karnataka.png"></a>
+             
+      
+<a target="_blank" href="http://www.karnataka.gov.in" title="Govt. Of Karnataka"> <img src="images/karnataka.png"></a>
+
+ </div>
+
+ <div class="col-sm-8 small  background-blue text-centers text-white">
+ 
+ 
+ Website Content Managed by Directorate of Minorities, Government of Karnataka. <br>
+ Designed, Developed and Hosted by National Informatics Centre( NIC ).<br>
+ Questions regarding content or presentation may be mail to: <strong>gokdom[at]gmail[dot]com</strong>       
+ <br>
+ Last Updated: <strong>13/12/2018</strong>
+</div>
+
+</div>
+</div>
