adding home page header and footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,16 +1,16 @@
-<div class="container-fluid line">
+<div class="container-fluid line footer">
   <!-- Example row of columns -->
   <div class="row">
-<div class="col-sm-4">
+    <div class="col-sm-4">
+	  
+      <a target="_blank" href="http://www.minorityaffairs.gov.in/" title="Minority Affairs GoI"> <img src="assets/minorityaffairs.png"></a>
+                  
+           
+     <a target="_blank" href="http://www.karnataka.gov.in" title="Govt. Of Karnataka"> <img src="assets/karnataka.png"></a>
+     
+      </div>
 
- <a target="_blank" href="src/app/karnataka.png" title="Minority Affairs GoI"> <img src="src/app/karnataka.png"></a>
-             
-      
-<a target="_blank" href="http://www.karnataka.gov.in" title="Govt. Of Karnataka"> <img src="images/karnataka.png"></a>
-
- </div>
-
- <div class="col-sm-8 small  background-blue text-centers text-white">
+ <div class="col-sm-8 small  background-blue text-centers text-white" style="background-color:#0073b7 !important">
  
  
  Website Content Managed by Directorate of Minorities, Government of Karnataka. <br>
