--- a/src/app/bookmyhall-home/bookmyhall-home.component.html
+++ b/src/app/bookmyhall-home/bookmyhall-home.component.html
@@ -115,36 +115,37 @@
     </div>
     <div class="col-sm-6">
        <div class="container">
-          <h2>Carousel Example</h2>
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-             <!-- Indicators -->
-             <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-             </ol>
-             <!-- Wrapper for slides -->
-             <div class="carousel-inner">
-                <div class="item active">
-                   <img src="assets/hall1.jpg" alt="Los Angeles" style="width:100%;">
-                </div>
-                <div class="item">
-                   <img src="assets/hall2.jpg" alt="Chicago" style="width:100%;">
-                </div>
-                <div class="item">
-                   <img src="assets/hall3.jpg" alt="New york" style="width:100%;">
-                </div>
-             </div>
-             <!-- Left and right controls -->
-             <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-             <span class="glyphicon glyphicon-chevron-left"></span>
-             <span class="sr-only">Previous</span>
-             </a>
-             <a class="right carousel-control" href="#myCarousel" data-slide="next">
-             <span class="glyphicon glyphicon-chevron-right"></span>
-             <span class="sr-only">Next</span>
-             </a>
-          </div>
+          <h2>Gallery</h2>
+          <div id="demo" class="carousel slide" data-ride="carousel">
+
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+              <li data-target="#demo" data-slide-to="0" class="active"></li>
+              <li data-target="#demo" data-slide-to="1"></li>
+              <li data-target="#demo" data-slide-to="2"></li>
+            </ul>
+            
+            <!-- The slideshow -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/hall1.jpg" alt="Los Angeles" width="1100" height="500">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/hall2.jpg" alt="Chicago" width="1100" height="500">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/hall3.jpg" alt="New York" width="1100" height="500">
+              </div>
+            </div>
+            
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </a>
+          </div>       
        </div>
        <div _ngcontent-c3="" class="row">
           <div _ngcontent-c3="" class="col-md-6">
