adding html and css for about us page

--- a/src/app/bookmyhall-aboutus/bookmyhall-aboutus.component.html
+++ b/src/app/bookmyhall-aboutus/bookmyhall-aboutus.component.html
@@ -1,3 +1,32 @@
-<p>
-  bookmyhall-aboutus works!
-</p>
+<ol _ngcontent-c3="" class="breadcrumb" style="
+    margin: 0 1%;
+"><li _ngcontent-c3=""><a _ngcontent-c3="" href="#">Home</a></li><li _ngcontent-c3="" class="active">About Us</li><li _ngcontent-c3="" class="active">About the Directorate</li></ol>
+
+<div class="row"  style="padding: 0% 2%">
+    <div class="page-header center full-width">
+        <h2>About the Directorate</h2>
+      </div>
+</div>
+
+<div class="row" style="padding: 1% 10%">
+
+  <div class="col-sm-3">
+    <img src="assets/director2.jpg">
+  </div>
+  <div class="col-sm-9" style="text-align:justify">
+
+    The Directorate of Minorities was carved out of Directorate of Backward Classes and created in the year 1999-2000 to ensure a more focus approach towards issues relating to the notified Minorities communities, namely Muslim, Christians, Jains, Buddhist, Sikhs and Parsis. The Directorate working with vision to enable all the Minority Community people to lead a productive life with equal opportunities in the field of Socio, Economic, Education etc. The mandate of the Directorate includes  Planning Co-ordination, Evaluation and Implement development programmes for the benefit of the Minority Community. The main functions of the department are introduce schemes to promote accelerated socio economic development of Minorities, introduce educational concessions for students, implement scheme for development of Women and Children, providing training and employment opportunities, there by tackling the problems of economic backwardness among the Minorities. The Directorate is the nodal agency of the schemes being implemented by the State and Central Government Minority Welfare Department. The Directorate is located in Bengaluru. 
+  </div>
+  <div>
+      Sri. Akram Pasha, KAS is the Director, Directorate of Minorities. The Director is assisted by the Joint Director, Deputy Director and three Assistant Directors. The Directorate has a sanctioned strength of 48 Officers/Staff.
+
+      District Minority Welfare Offices attached to all 30 District Deputy Commissioner (D.C) office in Karnataka. These offices constituted for coordinating the Minority welfare activities in each District with a sanctioned strength of 6 to 13 Officers/staff.
+  </div>
+  <br>
+  <div>
+      <h4>No. of Posts under Directorate of Minorities</h4>
+      <img src="assets/TotalPosts.png"><br>
+      Under the Directorate of Minorities, 4455 posts have been created for the improvement and increase of the education standard of the improvement and increase of the education standard of Residential Schools, and also to strengthen the Directorate and Minority District Offices nearly 1500 group ‘B’ and ‘C’ posts of Teaching/Non-teaching staffs. Among them, nearly 300 posts are categorised under Section 371(j) and reserved for Hyderabad Karnataka Region. 
+During 2016-17 a Sum of Rs.637.00 lakhs budget was provided for Officers/Staff Salary, Office Administration & Other Expenses and Rs.637.00 lakhs was released and Rs.631.52 lakhs was spent upto March 2017.
+  </div>
+</div>
