--- a/src/app/bookmyhall-vision-mission/bookmyhall-vision-mission.component.html
+++ b/src/app/bookmyhall-vision-mission/bookmyhall-vision-mission.component.html
@@ -1,3 +1,97 @@
-<p>
-  bookmyhall-vision-mission works!
-</p>
+<ol class="breadcrumb" style="margin: 0 1%">
+	  <li><a href="#">Home</a></li>
+	  <li class="active">About Us</li>
+	  <li class="active">Vision and Mission</li>
+	</ol>
+
+<div class="row"  style="padding: 0% 2%">
+ 
+      <div class="page-header center full-width">
+		  <h2>Vision and Mission</h2>
+		</div>
+</div>
+
+<div class="row" style="padding: 1% 10%">
+	<div class="col-md-1">
+		
+		</div>
+		
+		<div class="col-md-10">
+							 
+			<h4><strong><i class="glyphicon glyphicon-hand-right"></i> FOR NEXT THREE YEARS FROM 2017-2020 </strong></h4>
+			
+			 <p class="text-justify ">
+				</p><ul class="text-green">
+					<li>Pre metric scholarship will be sanctioned to 30 lakh students.</li>
+					<li>Post metric and Merit cum Means scholarship will be sanctioned to 8 lakh students.</li>
+					<li>Fee reimbursement facility will be sanctioned to 2.25 lakh students.</li>
+					<li>1000 students will be provided financial assistance to study in foreign universities, through National Overseas Scheme.</li>
+					<li>Vidyasiri facility will be sanctioned to 30,000 students.</li>
+					<li>Under Minority Welfare Department 300 post/pre metric hostels are being maintained.  Out of which, 150 hostels are running in rented buildings. With the 	objective to provide better educational facilitates to students, it is proposed to build 150 new own hostels buildings.</li>
+					<li>50 new post metric hostels will be opened.</li>
+					<li>Additional 50,000 new students will be given admission into post metric and pre metric hostels.</li>
+					<li>Under Minority Welfare Department there are 92 Residential schools/ college/ model schools are being run as per today. Out of them around 55 are in rented building. With the objective to provide better educational facilitates to students, it is proposed to build at least 10 own new buildings for Residential schools/ college/ model schools.</li>
+					<li>50 new Residential schools/ college/ model schools will be opened.</li>
+					<li>Additional 25,000 new students be given admission into Residential schools/ college/ model schools.</li>
+					<li>25 Maulana Azad Bhavans will be constructed at District centres as office complexes of Minority Welfare Department.</li>
+					<li>Pre coaching for IAS/KAS/other exams will be provided to 1,000 candidates.</li>
+					<li>5,000 students will be given nursing training.</li>
+					<li>60,000 beneficiaries will be provided with assistance under Bidaai scheme.</li>
+					<li>Under Chief Ministers Minority Development Programme, 75,000 beneficiaries will be provided with basic facilities in Minority Colonies.</li>
+					<li>For working women belonging to minority community, 10 ‘Working Women Hostels’ will be opened for 500 working women.</li>
+				</ul>
+			 <p></p>			 
+			 
+				<h4><strong><i class="glyphicon glyphicon-hand-right"></i> FOR NEXT SEVEN YEARS FROM 2017-2024</strong></h4>
+				
+				 <p class="text-justify ">
+				</p><ul class="text-blue">
+					<li>Pre metric scholarship will be sanctioned to 80 lakh students.</li>
+					<li>Post metric and Merit cum Means scholarship will be sanctioned to 18.66 lakh students.</li>
+					<li>Fee reimbursement facility will be sanctioned to 5.25 lakh students.</li>
+					<li>2,350 students will be provided financial assistance to study in foreign universities, through National Overseas Scheme.</li>
+					<li>Vidyasiri facility will be sanctioned to 70,000 students.</li>
+					<li>Under Minority Welfare Department 350 post/pre metric hostels are being maintained.  Out of which, 200 hostels are running in rented buildings. With the 	objective to provide better educational facilitates to students, it is proposed to build 150 new own hostels buildings.</li>
+					<li>120 new post metric hostels will be opened.</li>
+					<li>Additional 1 lakh new students will be given admission into post metric and pre metric hostels.</li>
+					<li>Under Minority Welfare Department there are 92 Residential schools/ college/ model schools are being run as per today. Out of them around 55 are in rented building. With the objective to provide better educational facilitates to students, it is proposed to build at least 23 own new buildings for Residential schools/ college/ model schools.</li>
+					<li>115 new Residential schools/ college/ model schools will be opened.</li>
+					<li>Additional 60,000 new students be given admission into Residential schools/ college/ model schools.</li>
+					<li>40 Maulana Azad Bhavans will be constructed at District centres as office complexes of Minority Welfare Department.</li>
+					<li>Pre coaching for IAS/KAS/other exams will be provided to 2,450 candidates.</li>
+					<li>5,000 students will be given nursing training.</li>
+					<li>1,40,000 beneficiaries will be provided with assistance under Bidaai scheme.</li>
+					<li>Under Chief Ministers Minority Development Programme, 1 lakh beneficiaries will be provided with basic facilities in Minority Colonies.</li>
+					<li>For working women belonging to minority community, 10 ‘Working Women Hostels’ will be opened for 600 working women.</li>
+				</ul>
+			 <p></p>
+			 
+			 <h4><strong><i class="glyphicon glyphicon-hand-right"></i> FOR NEXT FIFTEEN YEARS FROM 2017-2030</strong></h4>
+				
+				 <p class="text-justify ">
+				</p><ul class="text-orange">
+					<li>Pre metric scholarship will be sanctioned to 165 lakh students.</li>
+					<li>Post metric and Merit cum Means scholarship will be sanctioned to 40 lakh students.</li>
+					<li>Fee reimbursement facility will be sanctioned to 26.25 lakh students.</li>
+					<li>5,035 students will be provided financial assistance to study in foreign universities, through National Overseas Scheme.</li>
+					<li>Vidyasiri facility will be sanctioned to 1,50,000 students.</li>
+					<li>Under Minority Welfare Department 500 post/pre metric hostels are being maintained.  Out of which, 150 hostels are running in rented buildings. With the 	objective to provide better educational facilitates to students, it is proposed to build 200 new own hostels buildings.</li>
+					<li>250 new post metric hostels will be opened.</li>
+					<li>Additional 2 lakh new students will be given admission into post metric and pre metric hostels.</li>
+					<li>Under Minority Welfare Department there are 92 Residential schools/ college/ model schools are being run as per today. Out of them around 55 are in rented building. With the objective to provide better educational facilitates to students, it is proposed to build at least 23 own new buildings for Residential schools/ college/ model schools.</li>
+					<li>190 new Residential schools/ college/ model schools will be opened.</li>
+					<li>Additional 80,000 new students be given admission into Residential schools/ college/ model schools.</li>
+					<li>80 Maulana Azad Bhavans will be constructed at District centres as office complexes of Minority Welfare Department.</li>
+					<li>Pre coaching for IAS/KAS/other exams will be provided to 5,000 candidates.</li>
+					<li>25,000 students will be given nursing training.</li>
+					<li>2,80,000 beneficiaries will be provided with assistance under Bidaai scheme.</li>
+					<li>Under Chief Ministers Minority Development Programme, 2 lakh beneficiaries will be provided with basic facilities in Minority Colonies.</li>
+					<li>For working women belonging to minority community, 48 ‘Working Women Hostels’ will be opened for 2,400 working women.</li>
+				</ul>
+			 <p></p>
+		</div>
+		
+		<div class="col-md-1">
+		
+		</div>
+</div>
