adding login page form with css

--- a/src/app/bookmyhall-login/bookmyhall-login.component.html
+++ b/src/app/bookmyhall-login/bookmyhall-login.component.html
@@ -1,3 +1,42 @@
-<p>
-  bookmyhall-login works!
-</p>
+<div class="outer">
+<form  clas="inner-div">
+
+
+  <div class="container ">
+    <h2 style="text-align:center">Login</h2>
+    <label for="uname"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="uname" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+        
+    <button type="submit">Login</button>
+    <small><span style="text-decoration:underline;color:blue">Forgot Password?</span></small>
+  </div>
+
+
+</form>
+<form  clas="inner-div">
+
+
+    <div class="container ">
+      <h2 style="text-align:center">Register</h2>
+      <label for="uname"><b>Username</b></label>
+      <input class="inputType" type="text" placeholder="Enter Username" name="uname" required>
+  
+      <label><b>Email Id</b></label>
+      <input class="inputType" type="email" placeholder="Enter Email Id" name="emailid" required>
+      
+      <label><b>Phone Number</b></label>
+      <input class="inputType" type="text" placeholder="Enter Phone Number" name="Phno" required>
+
+      <label><b>Address</b></label>
+      <textarea class="textArea" placeholder="...."></textarea>
+
+      <button type="submit" id="JQueryClick">Login</button>
+      <small>Don't have an account? <span style="text-decoration:underline;color:blue">Login</span></small>
+    </div>
+  
+  
+  </form>
+</div>
