--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-
+<div class="header">
   <div class="container-fluid a1" style="background: #deddde url('assets/bg.jpg') repeat-x;color:#fff">
     <div class="row">
       <div style="width:100%">
@@ -158,3 +158,4 @@
         <i class="fa fa-quote-right text-black"></i>
       </div>
     </div>
+  </div>
