adding icon for rti page

--- a/src/app/bookmyhall-rti/bookmyhall-rti.component.html
+++ b/src/app/bookmyhall-rti/bookmyhall-rti.component.html
@@ -14,14 +14,14 @@
 
 <div class="col-md-10">
 			
-  <h4><a href="http://kic.gov.in"><i class="fa fa-globe-americas"></i> Karnataka Information Commission Website</a></h4>
+  <h4><a href="http://kic.gov.in"><i class="fa fa-globe"></i> Karnataka Information Commission Website</a></h4>
   
  <br>
-          <a href="Documents\Notifications_Reports\RTI\RTI4(1)a.pdf"><i class="fas fa-angle-right"></i> RTI 4 (1) a </a>
+          <a href="Documents\Notifications_Reports\RTI\RTI4(1)a.pdf"><i class="fa fa-chevron-right"></i>RTI 4 (1) a </a>
    <br>
-   <a href="Documents\Notifications_Reports\RTI\RTI4(1)b.pdf"><i class="fas fa-angle-right"></i> RTI 4 (1) b</a>
+   <a href="Documents\Notifications_Reports\RTI\RTI4(1)b.pdf"><i class="fa fa-chevron-right"></i>RTI 4 (1) b</a>
    <br>
-   <a href="Documents\Notifications_Reports\RTI\Appellate.pdf"><i class="fas fa-angle-right"></i> First Appellate Authority Under RTI Act 2005</a>
+   <a href="Documents\Notifications_Reports\RTI\Appellate.pdf"><i class="fa fa-chevron-right"></i> First Appellate Authority Under RTI Act 2005</a>
   <br>
   <br>
 </div>
