adding css and js for login page

--- a/src/app/bookmyhall-login/bookmyhall-login.component.html
+++ b/src/app/bookmyhall-login/bookmyhall-login.component.html
@@ -10,13 +10,13 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
         
-    <button type="submit">Login</button>
+    <button  class="flipWrapperBtn">Login</button>
     <small><span style="text-decoration:underline;color:blue">Forgot Password?</span></small>
   </div>
 
 
 </form>
-<form  clas="inner-div">
+<form  clas="inner-div" style="display:none">
 
 
     <div class="container ">
