--- a/src/app/bookmyhall-login/bookmyhall-login.component.html
+++ b/src/app/bookmyhall-login/bookmyhall-login.component.html
@@ -8,16 +8,21 @@
       <h1 class="form-signin-heading">Sign in</h1>
       <p class="lead">Not a member? Please <a routerLink="/register">register</a> instead.</p>
   
-      <form (submit)="login()">
+      <form [formGroup]="loginForm">
         <div class="form-group">
-          <label for="email">Email address</label>
-          <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.username">
+          <label for="exampleInputEmail1">Email address</label>
+          <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted"></small>
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="credentials.password">
+          <label for="passwordInput">Password</label>
+          <input formControlName="password" type="password" class="form-control" id="passwordInput" aria-describedby="passHelp" placeholder="password">
+          <small id="passHelp" class="form-text text-muted"></small>
         </div>
-        <button type="submit" class="btn btn-default">Sign in!</button>
+  
+        <div class="form-group" style="text-align:center;">
+            <button type="button" class="btn btn-dark" (click)="login()">Log in</button>           
+        </div>
       </form>
 
     </div>
