--- a/src/app/bookmyhall-login/bookmyhall-login.component.html
+++ b/src/app/bookmyhall-login/bookmyhall-login.component.html
@@ -1,4 +1,4 @@
-<form id="loginposition">
+<!-- <form id="loginposition">
   <div class="loginheader">
       <h1 style="text-align:center">Login</h1>
   </div>
@@ -40,4 +40,21 @@
       <a class="register-link" (click)="Loginform()"  style="cursor: pointer;text-align: right"><i class="fa fa-sign-in"></i> &nbsp;Login</a>
     </div>
   </div>
+  </form> -->
+
+  <form [formGroup]="loginForm">
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted"></small>
+    </div>
+    <div class="form-group">
+      <label for="passwordInput">Password</label>
+      <input formControlName="password" type="password" class="form-control" id="passwordInput" aria-describedby="passHelp" placeholder="password">
+      <small id="passHelp" class="form-text text-muted"></small>
+    </div>
+
+    <div class="form-group" style="text-align:center;">
+        <button type="button" class="btn btn-dark" (click)="login()">Log in</button>        
+    </div>
   </form>
