--- a/src/app/bookmyhall-login/bookmyhall-login.component.html
+++ b/src/app/bookmyhall-login/bookmyhall-login.component.html
@@ -1,14 +1,18 @@
+
+
 <form id="loginposition">
   <div class="loginheader">
       <h1 style="text-align:center">Login</h1>
   </div>
   <div class="container ">
     
-    <label for="uname"  class="label"><i class="fa fa-user"></i>&nbsp;<b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    
+    <div><span class="span-ico"><i class="fa fa-envelope"></i></span><input type="email" placeholder="Enter Email Id" name="Email" required>
+      </div>
+      
+      <div><span class="span-ico"><i class="fa fa-lock"></i></span><input type="password" placeholder="Enter Password" name="psw" required>
+      </div>
 
-    <label for="psw" class="label"><i class="fa fa-lock"></i>&nbsp;<b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
     <div class="text-align-center">
     <button type="submit" class="loginbtn">Login</button>
   </div>
@@ -22,17 +26,18 @@
     <h1 style="text-align:center">Register</h1>
     </div>
     <div class="container ">
-      <label for="uname" class="label"><i class="fa fa-user"></i>&nbsp;<b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
-  
-      <label for="email" class="label"><i class="fa fa-envelope"></i>&nbsp;<b>Email Id</b></label>
-      <input type="email" placeholder="Enter Email Id" name="Email" required>
-       
-      <label for="phno" class="label"><i class="fa fa-phone"></i>&nbsp;<b>phone number</b></label>
-      <input type="number" placeholder="Enter Phone number" name="Email" required>
+      <div><span class="span-ico"><i class="fa fa-user"></i></span><input type="text" placeholder="Enter Username" name="uname" required>
+      </div>
+      
+      <div><span class="span-ico"><i class="fa fa-envelope"></i></span><input type="email" placeholder="Enter Email Id" name="Email" required>
+       </div>
+     
+       <div><span class="span-ico"><i class="fa fa-lock"></i></span><input type="password" placeholder="Enter Password" name="psw" required>
+       </div>
 
-      <label for="address" class="label"><i class="fa fa-address-book"></i>&nbsp;<b>Address</b></label>
-      <textarea type="text" placeholder="Address.........." name="address" required></textarea>
+       <div><span class="span-ico"><i class="fa fa-lock"></i></span><input type="password" placeholder="conform password" name="psw" required>
+       </div>
+ 
       <div class="text-align-center">
       <button type="submit" class="loginbtn">Register Now</button>
       </div>
@@ -41,3 +46,4 @@
     </div>
   </div>
   </form>
+  
