--- a/src/app/bookmyhall-login/bookmyhall-login.component.html
+++ b/src/app/bookmyhall-login/bookmyhall-login.component.html
@@ -2,7 +2,7 @@
 
   <form [formGroup]="loginForm">
       <div class="loginheader">
-          <h1 style="text-align:center">Login</h1>
+          <h2 style="text-align:center">Login</h2>
       </div>
     <div style="padding:15px 25px">
     <div class="form-group">
@@ -19,7 +19,7 @@
     <div class="form-group" style="text-align:center;">
         <button type="button" class="btn btn-dark loginbtn" (click)="login()">Log in</button>        
     </div>
-    <a class="register-link" (click)="Registerform()" >Don't have account Register</a> 
+    <a class="register-link" href="/register" >Don't have account Register</a> 
     </div>
   </form>
 
