--- a/src/app/bookmyhall-profile/bookmyhall-profile.component.html
+++ b/src/app/bookmyhall-profile/bookmyhall-profile.component.html
@@ -1,27 +1,11 @@
-<div class="container">
-    <button mat-raised-button color="primary" routerLinkActive="active" (click)="logout()" *ngIf="UserService.loggedIn">Logout</button>
-
-  <div class="row">
-    
-    <div class="col-md-6">
-      <form action="/action_page.php">
-        <div class="form-group">
-          <label for="email">Email address:</label>
-          <input type="email" class="form-control" id="email">
-        </div>
-        <div class="form-group">
-          <label for="pwd">Password:</label>
-          <input type="password" class="form-control" id="pwd">
-        </div>
-        <div class="checkbox">
-          <label><input type="checkbox"> Remember me</label>
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-    </div>
-    <div class="col-md-6">
-
-    </div>
-
-  </div>
+<div class="sidebar">
+  <a class="active" href="#home"><i class="fa fa-fw fa-home"></i>Home</a>
+  <a href="#details"><i class="fa fa-fw fa-list"></i>Booking Details</a> 
+  <a routerLinkActive="active" (click)="logout()" *ngIf="UserService.loggedIn"><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a>
+</div>
+<div class="content" id="contact">
+  <h2>Responsive Sidebar Example</h2>
+  <p>This example use media queries to transform the sidebar to a top navigation bar when the screen size is 700px or less.</p>
+  <p>We have also added a media query for screens that are 400px or less, which will vertically stack and center the navigation links.</p>
+  <h3>Resize the browser window to see the effect.</h3>
 </div>
